packages/frontend/scss/message/_message.scss
/* ... */
.message.type-sticker {
  .msg-container {
    background-color: transparent !important;

    .author-wrapper,
    .forwarded-indicator {
      display: none;
    }

    .quote-background {
      // `.msg-container` background is transparent,
      // so let's explicitly apply the color just for the quote.
      background: var(--messageBg);

      padding: 5px;
      padding-left: 6px;
      border-radius: 7px;

      & > .quote {
        margin: 0;
      }
    }
  }

  .message-attachment-media {
    background-color: transparent;
    & > .attachment-content {
      // Make space for the footer, which is `position: absolute;`.
      // However, this does not account for the case
      // where the footer text wraps.
      margin-bottom: 26px;

      cursor: default;
    }
  }

  .metadata {
    float: right;
    padding: 4px 8px 1px 8px;
    background-color: #01010159;
    border-radius: 4px;
    color: black;
    font-weight: bold;
  }

  .metadata {
    .date,
    .edited {
      font-size: 11px;
      color: white;
    }

    .padlock-icon {
      @include color-svg('./images/padlock.svg', white, 125%);
    }

    .location-icon {
      @include color-svg('./images/map-marker.svg', white, 100%);
    }

    .saved-message-icon {
      @include color-svg('./images/icons/bookmark-filled.svg', white, 100%);
    }
  }

  .status-icon.read,
  .status-icon.delivered {
    background-color: white;
  }
}

.message.has-html {
  .text {
    padding-bottom: 10px;
  }
}

.message.error.incoming {
  .text {
    font-style: italic;
  }
}

.message.forwarded {
  .forwarded-indicator {
    font-weight: bold;
    font-size: 0.9em;
    margin-bottom: 3px;
    opacity: 0.86;

    .forwarded-indicator-button {
      @include button-reset;

      cursor: pointer;
    }
  }
  .message-attachment-media {
    border-top-left-radius: 0;
    border-top-right-radius: 0;
    margin-top: 0;
  }
}

.setupMessage {
  .message {
    .text {
      color: var(--setupMessageText);
    }
  }
}

// Spec: container > 593px
@media (min-width: 926px) {
  .message {
    max-width: 75%;

    &.incoming {
      margin-right: auto;
    }

    &.outgoing {
      margin-left: auto;
    }
  }
}

@media (max-width: 925px) {
  .message {
    max-width: 100%;

    &.incoming {
      margin-right: auto;
    }

    &.outgoing {
      margin-left: auto;
    }
  }
}

.info-message {
  width: 100%;
  text-align: center;
  margin: 26px 0px;
  display: flex;
  flex-direction: column;
  align-items: center;

  img.verified-icon-info-msg {
    --size: 64px;
    width: var(--size);
    height: var(--size);
    margin-bottom: 10px;
  }

  .bubble {
    @include button-reset;

    display: inline-block;
    text-align: center;
    padding: 7px 14px;
    padding-bottom: 5px;
    background-color: var(--infoMessageBubbleBg);
    border-radius: 20px;
    opacity: 0.9;
    color: var(--infoMessageBubbleText);

    .status-icon.sending {
      background-color: var(--infoMessageBubbleText);
    }
  }

  &.daymarker {
    .bubble {
      font-weight: bold;
    }
  }

  &.interactive > .bubble {
    cursor: pointer;

    &:hover,
    &:focus,
    &:focus-within {
      opacity: 1;
    }
  }

  &.webxdc-info > .bubble {
    padding: 7px 8px;
    img {
      height: 18px;
      width: 18px;
      margin-inline-end: 5px;
      border-radius: 7%; // webxdc border radius
      vertical-align: bottom;
      background-color: black;
    }
  }

  &.big > .bubble {
    max-width: 550px;
    font-size: 1rem;
    padding: 2rem;
    font-style: normal;
    white-space: pre-wrap;
    text-align: left;
  }
}

// quote

.quote-background {
  @include button-reset;

  overflow: hidden;
  max-width: 100%;
}
/* ... */

